// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }

  .c-MQgzr {
    flex-shrink: 0;
    display: flex;
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-hUDFHn {
    color: var(--colors-secondary);
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
  }

  .c-hUDFHn:hover {
    color: var(--colors-primary);
  }

  .c-hUDFHn[data-disabled],
  .c-hUDFHn[data-disabled]:hover {
    color: var(--colors-tonal300);
    cursor: default;
  }

  .c-hUDFHn[data-state="active"] {
    color: var(--colors-primary);
    font-weight: bold;
    box-shadow: inset 0 -3px 0 0 currentColor;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }
}

<div>
  <div
    class="c-fixGjY"
    data-orientation="horizontal"
  >
    <div
      aria-orientation="horizontal"
      class="c-MQgzr"
      data-orientation="horizontal"
      dir="ltr"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <div
        aria-controls="radix-id-0-1-content-tab1"
        aria-selected="true"
        class="c-hUDFHn"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-id-0-1-trigger-tab1"
        role="tab"
        tabindex="-1"
      >
        Trigger 1
      </div>
      <div
        aria-controls="radix-id-0-1-content-tab2"
        aria-selected="false"
        class="c-hUDFHn"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-id-0-1-trigger-tab2"
        role="tab"
        tabindex="-1"
      >
        Trigger 2
      </div>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }

  .c-MQgzr {
    flex-shrink: 0;
    display: flex;
    border-bottom: 1px solid var(--colors-primaryDark);
  }

  .c-hUDFHn {
    color: var(--colors-secondary);
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    -webkit-user-select: none;
    user-select: none;
  }

  .c-hUDFHn:hover {
    color: var(--colors-primary);
  }

  .c-hUDFHn[data-disabled],
  .c-hUDFHn[data-disabled]:hover {
    color: var(--colors-tonal300);
    cursor: default;
  }

  .c-hUDFHn[data-state="active"] {
    color: var(--colors-primary);
    font-weight: bold;
    box-shadow: inset 0 -3px 0 0 currentColor;
  }

  .c-eGaVeY {
    flex-grow: 1;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-CYaOB {
    position: absolute;
    top: calc(50% - 20px);
    background: white !important;
    opacity: 0.8;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-lg {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-fLGGKn-size-lg {
    height: var(--sizes-3);
    width: var(--sizes-3);
    stroke-width: 2;
  }
}

@media  {
  .c-fDzwZw-cmVfvW-cv {
    background: transparent;
    color: var(--colors-primary);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):hover,
  .c-fDzwZw-cmVfvW-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-cmVfvW-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }

  .c-CYaOB-icezigA-css {
    left: 0;
  }

  .c-dbrbZt-ihFPSGE-css {
    height: 20px;
    width: 20px;
  }

  .c-MQgzr-ifTJoPk-css {
    width: 100%;
    overflow-x: auto;
  }

  .c-MQgzr-ifTJoPk-css::-webkit-scrollbar {
    display: none;
  }

  .c-MQgzr-ifTJoPk-css div:first-child {
    padding-left: var(--space-6);
  }

  .c-MQgzr-ifTJoPk-css div:last-child {
    padding-right: var(--space-6);
  }

  .c-CYaOB-iczsSGP-css {
    right: 0;
  }
}

<div>
  <div
    class="c-fixGjY"
    data-orientation="horizontal"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <button
        aria-label="scroll-left"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-cmVfvW-cv c-CYaOB c-CYaOB-icezigA-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-ihFPSGE-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <div
        aria-orientation="horizontal"
        class="c-MQgzr c-MQgzr-ifTJoPk-css"
        data-orientation="horizontal"
        dir="ltr"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <div
          aria-controls="radix-id-0-1-content-tab1"
          aria-selected="true"
          class="c-hUDFHn"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-id-0-1-trigger-tab1"
          role="tab"
          tabindex="-1"
        >
          Trigger 1 which is going to be long
        </div>
        <div
          aria-controls="radix-id-0-1-content-tab2"
          aria-selected="false"
          class="c-hUDFHn"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-id-0-1-trigger-tab2"
          role="tab"
          tabindex="-1"
        >
          Trigger 2 which is going to be even longer
        </div>
      </div>
      <button
        aria-label="scroll-right"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-cmVfvW-cv c-CYaOB c-CYaOB-iczsSGP-css"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-ihFPSGE-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab1"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="active"
      id="radix-id-0-1-content-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-id-0-1-trigger-tab2"
      class="c-eGaVeY"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-id-0-1-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
